--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -12,6 +12,17 @@
     <title>Let's Do</title>
   </head>
   <body>
+    {% if user.is_authenticated %}
+    Logged In as {{ user.username }}
+    <a href="#">Logout</a>
+
+    {% else %}
+    <a href="#" >Sign Up</a>
+    <a href="#" >Log In</a>
+
+    {% endif %}
+
+
     <div class="container">
       <br>
       {% block content %} {% endblock %}
