--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -14,11 +14,15 @@
   <body>
     {% if user.is_authenticated %}
     Logged In as {{ user.username }}
-    <a href="#">Logout</a>
+    <form action="{% url 'logoutuser' %}" method="POST" accept-charset="utf-8">
+      {% csrf_token %}
+      <button type="submit">Logout</button>
+      
+    </form>
 
     {% else %}
-    <a href="#" >Sign Up</a>
-    <a href="#" >Log In</a>
+    <a href="{% url 'signupuser' %}" >Sign Up</a>
+    <a href="{% url 'loginuser' %}" >Log In</a>
 
     {% endif %}
 
